<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.TicketsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect"
        android:text="@string/my_profile"
        android:padding="10dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:layout_gravity="center"
        android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/names"
                    android:padding="@dimen/activity_vertical_margin"/>

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:padding="@dimen/activity_vertical_margin"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/prof_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_s_name"
                    android:padding="@dimen/activity_vertical_margin"/>

                <TextView
                    android:id="@+id/prof_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_s_email"
                    android:padding="@dimen/activity_vertical_margin"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/rect_blue"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/logout"
            android:clickable="true"
            android:onClick="logout"
            android:layout_gravity="center"
            android:focusable="true" />
    </LinearLayout>
</FrameLayout>