<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="12dp"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="193dp"
                android:layout_height="102dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/splash" />

            <poppinjay13.projects.android.customfonts.MyTextView_SF_Pro_Display_Medium
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="#323643"
                android:textSize="21.3sp"/>

            <poppinjay13.projects.android.customfonts.MyTextView_SF_Pro_Display_Light
                android:layout_gravity="center"
                android:layout_marginTop="9.6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15.4sp"
                android:textColor="#606470"
                android:text="@string/login_to_continue_using_filmato"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:cardElevation="1dp"
                app:cardCornerRadius="6dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/rect"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="6dp"
                        android:src="@drawable/mail" />

                    <poppinjay13.projects.android.customfonts.EditText__SF_Pro_Display_Light
                        android:id="@+id/log_email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="10dp"
                        android:background="#00000000"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:textColorHint="#000000" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19.2dp"
                android:layout_marginStart="28.7dp"
                android:layout_marginEnd="28.9dp"
                app:cardElevation="1dp"
                app:cardCornerRadius="6dp"
                app:cardBackgroundColor="@color/white">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/rect"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="6dp"
                        android:src="@drawable/lock" />

                    <poppinjay13.projects.android.customfonts.EditText__SF_Pro_Display_Light
                        android:id="@+id/log_password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="10dp"
                        android:background="#00000000"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:textColorHint="#000000" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <poppinjay13.projects.android.customfonts.MyTextView_SF_Pro_Display_Light
                android:layout_gravity="right"
                android:layout_marginTop="19.2dp"
                android:layout_marginEnd="28.9dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="#606470"
                android:textSize="15.4sp"/>


            <poppinjay13.projects.android.customfonts.MyTextView_Roboto_Regular
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="28.7dp"
                android:layout_marginTop="40.2dp"
                android:layout_marginEnd="28.9dp"
                android:background="@drawable/rect_blue"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="#fbfbfb"
                android:textSize="15.4sp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:srcCompat="@drawable/login" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <poppinjay13.projects.android.customfonts.MyTextView_SF_Pro_Display_Light
                android:layout_gravity="center"
                android:textSize="15.4sp"
                android:textColor="#606470"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user" />

            <poppinjay13.projects.android.customfonts.MyTextView_SF_Pro_Display_Medium
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15.4sp"
                android:textColor="#3277d8"
                android:onClick="signUp"
                android:text="@string/sign_up_for_a_new_account" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>