<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="12dp"
    android:background="@color/white"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="131dp"
                android:layout_gravity="center"
                android:layout_marginTop="50.2dp"
                android:src="@drawable/icon" />
            <poppinjay13.projects.android.customfonts.MyTextView_SF_Pro_Display_Medium
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_aboard"
                android:textColor="#323643"
                android:textSize="21.3sp"/>
            <poppinjay13.projects.android.customfonts.MyTextView_SF_Pro_Display_Light
                android:layout_gravity="center"
                android:layout_marginTop="9.6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15.4sp"
                android:textColor="#606470"
                android:text="@string/sign_up_with_us_in_a_few_simple_steps"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34.1dp"
                android:layout_marginStart="28.7dp"
                android:layout_marginEnd="28.9dp"
                app:cardElevation="1dp"
                app:cardCornerRadius="6dp"
                app:cardBackgroundColor="@color/white">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/rect"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="6dp"
                        android:src="@drawable/profile" />

                    <poppinjay13.projects.android.customfonts.EditText__SF_Pro_Display_Light
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="10dp"
                        android:background="#00000000"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:textColorHint="#000000" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19.2dp"
                android:layout_marginStart="28.7dp"
                android:layout_marginEnd="28.9dp"
                app:cardElevation="1dp"
                app:cardCornerRadius="6dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/rect"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="6dp"
                        android:src="@drawable/mail" />

                    <poppinjay13.projects.android.customfonts.EditText__SF_Pro_Display_Light
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="10dp"
                        android:background="#00000000"
                        android:inputType="textEmailAddress"
                        android:hint="@string/prompt_email"
                        android:textColorHint="#000000" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19.2dp"
                android:layout_marginStart="28.7dp"
                android:layout_marginEnd="28.9dp"
                app:cardElevation="1dp"
                app:cardCornerRadius="6dp"
                app:cardBackgroundColor="@color/white">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/rect"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="6dp"
                        android:src="@drawable/lock" />

                    <poppinjay13.projects.android.customfonts.EditText__SF_Pro_Display_Light
                        android:id="@+id/password_signup"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="10dp"
                        android:background="#00000000"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:textColorHint="#000000" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <poppinjay13.projects.android.customfonts.MyTextView_Roboto_Regular
                android:id="@+id/sign_up_button"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="28.8dp"
                android:layout_marginBottom="20.7dp"
                android:layout_marginStart="28.7dp"
                android:layout_marginEnd="28.9dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:background="@drawable/rect_blue"
                android:textColor="#fbfbfb"
                android:textSize="15.4sp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20.7dp"

            android:orientation="horizontal">


            <poppinjay13.projects.android.customfonts.MyTextView_SF_Pro_Display_Light
                android:layout_gravity="center"
                android:textSize="15.4sp"
                android:textColor="#606470"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_a_user" />

            <poppinjay13.projects.android.customfonts.MyTextView_SF_Pro_Display_Medium
                android:layout_gravity="center"
                android:layout_marginStart="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15.4sp"
                android:textColor="#3277d8"
                android:onClick="login"
                android:text="@string/login_now" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>