<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ripple"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:radius="30dp"
    android:background="@drawable/rect"
    android:padding="@dimen/activity_vertical_margin"
    android:layout_margin="10dp">
    <LinearLayout
        android:id="@+id/movies_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:minHeight="72dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:layout_margin="2dp"
                android:text="@string/movie_title"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_margin="2dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/rating_image"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/star"
                    android:tint="@color/colorAccent" />
                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/rating" />
            </LinearLayout>
            <TextView
                android:id="@+id/description"
                android:text="@string/movie_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:ellipsize="end"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:layout_margin="2dp"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>